# Attemp2

Team908/: CMakeLists.txt  package.xml
Team908/include/: utils.h
Team908/launch/: Team908.launch
Team908/src/: carcontrol.cpp  main.cpp  utils.cpp
image_detect/: CMakeLists.txt
lane/: CMakeLists.txt
lane/include/: carcontrol.h
lane/launch/: lane.launch
lane/src/: a.out  carcontrol.cpp  detectlane.cpp  main.cpp  test.cpp
lane_detect/: CMakeLists.txt
lane_detect/include/: carcontrol.h  detectlane.h  utils.h
lane_detect/launch/: lane_detect.launch
lane_detect/src/: carcontrol.cpp  detectlane.cpp  main.cpp  test.cpp
sign/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
sign/catkin_generated/: pkg.installspace.context.pc.py
sign/catkin_generated/installspace/: sign.pc  signConfig.cmake
sign/script/: README  Test.ipynb  Untitled.ipynb  classification.py  detectsign.py  shallownet_weights.hdf5  signnode.py  test.py  traffic_detect.py
sign/script/devel/: .catkin  .rosinstall
team908/: CMakeLists.txt  package.xml
team908/include/: carcontrol.h
team908/launch/: team908.launch
team908/script/sign/: CMakeLists.txt
team908/script/sign/catkin_generated/: package.cmake  pkg.develspace.context.pc.py
team908/script/sign/msg/: SignMsg.msg
team908/script/sign/script/: signnode.py  test.py
team908/script/sign/script/catkin_generated/: generate_cached_setup.py
team908/script/sign/script/devel/: setup.sh
team908/src/lane908/include/: detectlane.h
team908/src/lane908/src/: carcontrol.cpp  main.cpp
(+2 files in other folders)
